# bitflow

./: .env.local.example  .gitignore  DESIGN_PHILOSOPHY.md  DESKTOP_REVISION_PLAN.md  MOBILE_REVISION_PLAN.md  MOTION_SYSTEM.md  PLAN.md  README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
docs/: MVP_PLAN_BULL_VS_BEAR.md  bitcoin-onchain-handoff-2026-03-15.md  bitcoin-onchain-remaining-work.md  bitcoin-onchain-supabase-architecture.md  bitcoin-weather-station-differentiation-strategy.md  strategy-capital-engine-handoff-2026-03-15.md
launchd/: com.bitflow.onchain-db-guard.plist  com.bitflow.onchain-retention.plist
public/: ads.txt  llms-full.txt  llms.txt  manifest.json
python/: .env.example  README.md  pyproject.toml
python/src/bitflow_onchain/: __init__.py  config.py  main.py  models.py
python/src/bitflow_onchain/clients/: __init__.py  bitcoin_rpc.py  postgres.py
python/src/bitflow_onchain/pipelines/: __init__.py  backfill.py  ingestion.py  metrics.py  realtime.py
python/src/bitflow_onchain/transformers/: __init__.py  normalize.py
python/tests/: test_bitcoin_rpc.py  test_ingestion_prevout_resolution.py  test_metric_formulas.py  test_prune_onchain_postgres_script.py
scripts/: bootstrap-onchain-from-blockstream.mjs  bootstrap-x-session.mjs  collect-data.js  generate-og.js  generate-onchain-fallback.mjs  generate-summary.js  generate-weekly-report.mjs  guard-onchain-postgres.sh  ingest-news-candidates.mjs  notify.js  post-tweet.js  prune-onchain-postgres.sh  reset-onchain-postgres-to-prune-window.sh  run-news-ingest.sh  setup.js  (+7 more)
(+296 files in other folders)
